Migrate to Java 9